--- a/sass/site/header.scss
+++ b/sass/site/header.scss
@@ -1,5 +1,4 @@
 .header {
-  position: relative;
   &__warp {
     display: flex;
     flex-direction: column;
@@ -7,8 +6,6 @@
     @media (min-width: $tablet) {
       flex-direction: row;
       justify-content: space-between;
-    }
-    @media (min-width: $desktop) {
       position: absolute;
       top: 0;
       right: 0;
@@ -25,10 +22,11 @@
     }
   }
   &__main-sect {
+    position: relative;
     &--indent {
       padding-bottom: 20px;
       @media (min-width: $tablet) {
-        padding: 30px 0 0 80px;
+        padding: 30px 0 0 85px;
         //padding-bottom: 50px;
         //padding-left: 90px;
       }
@@ -36,6 +34,19 @@
         padding: 0;
         margin-bottom: 80px;
       }
+    }
+  }
+  @media (min-width: $desktop) {
+    &:after {
+      content: ' ';
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 50%;
+      z-index: 0;
+      height: 695px;
+      background: #63a73a url('/img/index-background-desktop.png') no-repeat;
     }
   }
 }
