--- a/css/main.css
+++ b/css/main.css
@@ -59,20 +59,6 @@ a {
     z-index: 11;
     pointer-events: none;
     display: none; }
-    .maket__pos--mobile {
-      display: block; }
-      @media (min-width: 321px) {
-        .maket__pos--mobile {
-          display: none; } }
-    @media (min-width: 321px) {
-      .maket__pos--tablet {
-        display: block; } }
-    @media (min-width: 1440px) {
-      .maket__pos--tablet {
-        display: none; } }
-    @media (min-width: 1440px) {
-      .maket__pos--desktop {
-        display: block; } }
 
 .breakpoint {
   position: fixed;
@@ -1062,10 +1048,10 @@ h1 {
       width: 35px;
       height: 35px;
       background-color: #ffffff;
-      -webkit-transition: border 0.2s ease, -webkit-box-shadow 0.2s ease;
-      transition: border 0.2s ease, -webkit-box-shadow 0.2s ease;
-      transition: box-shadow 0.2s ease, border 0.2s ease;
-      transition: box-shadow 0.2s ease, border 0.2s ease, -webkit-box-shadow 0.2s ease;
+      -webkit-transition: opacity 0.2s ease, border-color 0.2s ease, -webkit-box-shadow 0.2s ease;
+      transition: opacity 0.2s ease, border-color 0.2s ease, -webkit-box-shadow 0.2s ease;
+      transition: box-shadow 0.2s ease, opacity 0.2s ease, border-color 0.2s ease;
+      transition: box-shadow 0.2s ease, opacity 0.2s ease, border-color 0.2s ease, -webkit-box-shadow 0.2s ease;
       -webkit-box-shadow: 0 1px 5px 0 rgba(50, 50, 50, 0.5);
               box-shadow: 0 1px 5px 0 rgba(50, 50, 50, 0.5); }
       .switcher__pointer:after {
@@ -1076,7 +1062,12 @@ h1 {
         bottom: 0;
         left: 0;
         border-radius: 50%;
-        border: 1px solid red; } }
+        border: 4px solid #68b738;
+        opacity: 0;
+        -webkit-transition: opacity 0.2s ease;
+        transition: opacity 0.2s ease; }
+      .switcher__pointer:hover:after {
+        opacity: 1; } }
   .switcher__text {
     border-bottom: 1px dotted rgba(0, 0, 0, 0.23);
     -webkit-transition: border 0.2s ease;
