--- a/sass/site/switcher.scss
+++ b/sass/site/switcher.scss
@@ -84,7 +84,7 @@
       cursor: pointer;
       @include square-size(35px);
       background-color: $white;
-      transition: box-shadow $transition-time ease, border $transition-time ease;
+      transition: box-shadow $transition-time ease, opacity $transition-time ease, border-color $transition-time ease;
       box-shadow: 0 1px 5px 0 rgba(50, 50, 50, .5);
       &:after {
         content: '';
@@ -94,7 +94,15 @@
         bottom: 0;
         left: 0;
         border-radius: 50%;
-        border: 1px solid red;
+        border: 4px solid $primary;
+        opacity: 0;
+        transition: opacity $transition-time ease;
+      }
+      &:hover {
+        //border-color: $primary;
+        &:after {
+          opacity: 1;
+        }
       }
     }
   }
