--- a/css/main.css
+++ b/css/main.css
@@ -1052,8 +1052,8 @@ h1 {
       transition: opacity 0.2s ease, border-color 0.2s ease, -webkit-box-shadow 0.2s ease;
       transition: box-shadow 0.2s ease, opacity 0.2s ease, border-color 0.2s ease;
       transition: box-shadow 0.2s ease, opacity 0.2s ease, border-color 0.2s ease, -webkit-box-shadow 0.2s ease;
-      -webkit-box-shadow: 0 1px 5px 0 rgba(50, 50, 50, 0.5);
-              box-shadow: 0 1px 5px 0 rgba(50, 50, 50, 0.5); }
+      -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.15);
+              box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.15); }
       .switcher__pointer:after {
         content: '';
         position: absolute;
@@ -1062,12 +1062,18 @@ h1 {
         bottom: 0;
         left: 0;
         border-radius: 50%;
-        border: 4px solid #68b738;
+        border: 2px solid #68b738;
         opacity: 0;
         -webkit-transition: opacity 0.2s ease;
         transition: opacity 0.2s ease; }
-      .switcher__pointer:hover:after {
-        opacity: 1; } }
+      .switcher__pointer:hover {
+        border-color: #68b738;
+        -webkit-box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.25);
+                box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.25); }
+      .switcher__pointer:active:after {
+        opacity: 1;
+        -webkit-box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.3);
+                box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.3); } }
   .switcher__text {
     border-bottom: 1px dotted rgba(0, 0, 0, 0.23);
     -webkit-transition: border 0.2s ease;
