--- a/sass/site/switcher.scss
+++ b/sass/site/switcher.scss
@@ -85,7 +85,7 @@
       @include square-size(35px);
       background-color: $white;
       transition: box-shadow $transition-time ease, opacity $transition-time ease, border-color $transition-time ease;
-      box-shadow: 0 1px 5px 0 rgba(50, 50, 50, .5);
+      box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .15);
       &:after {
         content: '';
         position: absolute;
@@ -94,14 +94,18 @@
         bottom: 0;
         left: 0;
         border-radius: 50%;
-        border: 4px solid $primary;
+        border: 2px solid $primary;
         opacity: 0;
         transition: opacity $transition-time ease;
       }
       &:hover {
-        //border-color: $primary;
+        border-color: $primary;
+        box-shadow: 0 3px 5px 0 rgba(0, 0, 0, .25);
+      }
+      &:active {
         &:after {
           opacity: 1;
+          box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .3);
         }
       }
     }
