--- a/sass/site/logo.scss
+++ b/sass/site/logo.scss
@@ -13,7 +13,7 @@
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    left: 25px;
+    left: 0;
     @media (min-width: $tablet) {
       display: none;
     }
